Integración de main a ramas individuales para trabajar con Frontend